Fix 'How to get started' layout in Firefox
 * Fix list item contents appearing underneath item numberings by
   removing the paragraph tag used to create spacing between items and
   instead setting line-height on list items.

 * Fix difference in whitespace at the start of list items between
   Firefox and Chrome by removing whitespace around Jinja tags.

 * Adjust padding between list item marker and content.
   See http://stackoverflow.com/a/26336092/434243

--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -93,6 +93,16 @@
   padding-left: 0;
 }
 
+.search-result-zero__list-item {
+  line-height: 35px;
+
+  // Add additional padding between marker and item content.
+  &:before {
+    content: "";
+    padding-left: 5px;
+  }
+}
+
 .search-result-zero a {
   color: inherit;
   text-decoration: underline;
